// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render multiple expenses correctly  1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     for a total of 
    $1,141.95
  </p>
</div>
`;

exports[`should render nothing with no expenses passed in 1`] = `<div />`;

exports[`should render one expense correctly  1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     for a total of 
    $1.95
  </p>
</div>
`;
